[package]
name = "graph_shrine"
version = "0.1.0"
description = "the fastest known mutable graph"
license = "MIT"
authors = ["mako <marcus.yass@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# erasable = "1.2.1"
# slice-dst = "1.5.1"
# header-vec = "0.1.0"
bitvec = "1.0.1"
# rand = "0.8.4"
fastrand = "1.5.0"
vec-with-gaps = { path = "../vec-with-gaps/" }
left-right = "0.11.4"
itertools = "0.8.2"
parking_lot = { version = "0.11.2", feature = ["nightly"] }
noisy_float = "0.2"
priority-queue = "1.3"
simple-error = "0.2.3"

[dev-dependencies]
petgraph = "0.6.0"